--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,15 +1,15 @@
-body{
+body{/* to focus on the body to change background color and font*/
     font-size: large;
     background-color:#aad4cf ;
 }
 
-.wrapper{
+.wrapper{/*used to align to center nad gives color*/
     background-color:#d4e9e7 ;
     width: 1024px;
     margin: auto;
 }
 
-.mainheading{
+.mainheading{/*used to align lone starfish*/
     text-align: center;
     position:absolute;
     bottom: 410px;
@@ -19,7 +19,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-nav ul li{
+nav ul li{/*used to delete unordered list style*/
     display: inline;
     position: relative;
     padding-left: 130px;
@@ -37,28 +37,28 @@ nav ul li a{
     text-align: center;
 }
 
-.remove{
+.remove{/*to remove border mark*/
     border-left: 0px;
 }
 
-.main{
+.main{/*used to make space*/
     padding-left: 10px;
 }
 h2{
     font-family:Arial, Helvetica, sans-serif
 }
 
-.image1{
+.image1{ /*used to style artile align image*/
     float: left;
     padding-right: 20px;
     width: 20%;
 }
 
-.main2{
+.main2{/*used to make space*/
     padding-left: 10px;
 }
 
-#name, #email{
+#name, #email{/*used to increase width of both box*/
     width: 950px;
 }
 h4{
@@ -68,13 +68,13 @@ h4{
 h5{
     font-size: large;
 }
-#message{
+#message{/*used to incred width and size of message box*/
     width: 950px;
     height: 100px;
 }
 
-.contact{
-    size: 50px;;
+.contact{/*to style the contact box*/
+    size: 50px;
     
     box-sizing: content-box;
     width: 93%;
@@ -82,6 +82,6 @@ h5{
     border: solid black;
     padding: 20px;
 }
-footer p{
+footer p{ /*footer position and coolor*/
     float: right;
 }
